--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python = ">=3.10,<3.13"
 numpy = "^1.25.1"
 opencv-python = "^4.8.0"
 scipy = "^1.11.1"
+matplotlib = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.12.0"
@@ -41,7 +42,7 @@ exclude = "venv"
 max-line-length = 88
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 show_error_codes = true
 ignore_missing_imports = true
 strict = true
