--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,14 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
-numpy = "^1.25.1"
+python = ">=3.10,<3.12"
+numpy = "^1.24.0"
 opencv-python = "^4.8.0"
 scipy = "^1.11.1"
 matplotlib = "^3.7.2"
+scikit-learn = "^1.3.0"
+keras = "^2.13.1"
+tensorflow = "^2.13.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.12.0"
