--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "craterslab"
-version = "0.2.7"
+version = "0.2.8"
 description = ""
 license = "MIT"
 authors = [
@@ -20,14 +20,14 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.10"
 numpy = "^1.24.0"
 opencv-python = "^4.8.0"
 scipy = "^1.11.1"
 matplotlib = "^3.7.2"
 scikit-learn = "^1.3.0"
-keras = "^2.13.1"
-tensorflow = "^2.13.0"
+keras = ">=3.0.0"
+tensorflow = ">=2.13.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.12.0"
